--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     
     <body>
         <script src="script.js"></script>
-        <header>
-            <h1></h1>
-        </header>
         <main>
-            
+            <div></div>
+            <div></div>
         </main>
-        <footer>
-        </footer>
     </body>
 </html>
