added text and changed bg color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="script.js"></script>
         <main>
             <div></div>
+            <p>Worst web design ever!</p>
             <div></div>
         </main>
     </body>
